# RaytracingInAWeekend

./: .gitignore  CMakeLists.txt
include/: camera.hpp  color.hpp  common.hpp  hit_record.hpp  image.hpp  ray.hpp  vec3.hpp
include/materials/: diaelectric.hpp  dielectric.hpp  lambertian.hpp  material.hpp  metal.hpp
include/shapes/: shape.hpp  sphere.hpp
src/: CMakeLists.txt  camera.cpp  color.cpp  hit_record.cpp  image.cpp  main.cpp
src/shapes/: shape.cpp  sphere.cpp
test/: CMakeLists.txt  test_color.cpp  test_ray.cpp  test_refract.cpp  test_vec3.cpp
